syntax = "proto3";

package admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/fzf-labs/ai-boilerplate-backend/api/admin/v1;v1";

//小程序用户表
service WxXcxUser {
  //小程序用户表-删除一条数据
  rpc DeleteWxXcxUser(DeleteWxXcxUserReq) returns (DeleteWxXcxUserReply) {
    option (google.api.http) = {
      post: "/admin/v1/wx_xcx_user/delete"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //小程序用户表-单条数据查询
  rpc GetWxXcxUserInfo(GetWxXcxUserInfoReq) returns (GetWxXcxUserInfoReply) {
    option (google.api.http) = {get: "/admin/v1/wx_xcx_user/info"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //小程序用户表-列表数据查询
  rpc GetWxXcxUserList(GetWxXcxUserListReq) returns (GetWxXcxUserListReply) {
    option (google.api.http) = {get: "/admin/v1/wx_xcx_user/list"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
}

//小程序用户表信息
message WxXcxUserInfo {
  string id = 1; // 编号
  string appId = 2; // 微信小程序 appid
  string openid = 3; // 用户标识
  string unionid = 4; // 微信生态唯一标识
  string nickname = 5; // 昵称
  string avatarURL = 6; // 头像地址
  string language = 7; // 语言
  string country = 8; // 国家
  string province = 9; // 省份
  string city = 10; // 城市
  string remark = 11; // 备注
  string createdAt = 12; // 创建时间
  string updatedAt = 13; // 更新时间
}

//请求-小程序用户表-删除一条数据
message DeleteWxXcxUserReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // 编号
}

//响应-小程序用户表-删除一条数据
message DeleteWxXcxUserReply {}

//请求-小程序用户表-单条数据查询
message GetWxXcxUserInfoReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // 编号
}

//响应-小程序用户表-单条数据查询
message GetWxXcxUserInfoReply {
  WxXcxUserInfo info = 1;
}

//请求-小程序用户表-列表数据查询
message GetWxXcxUserListReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "page",
        "pageSize"
      ]
    }
  };
  int32 page = 1 [(buf.validate.field).int32 = {gte: 1}]; //页码
  int32 pageSize = 2 [(buf.validate.field).int32 = {
    gte: 1
    lte: 1000
  }]; //页数
}

//响应-小程序用户表-列表数据查询
message GetWxXcxUserListReply {
  int32 total = 1; //总数
  repeated WxXcxUserInfo list = 2; // 列表数据
}
